--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
+    "vercel": "^50.9.6",
     "vitest": "^4.0.18"
   }
 }
