--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "jsdom": "^27.4.0",
+    "supabase": "^2.74.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
