--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "next dev -H localhost",
+    "dev": "next dev -H localhost --webpack",
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
